# huoyan

./: .gitignore  README.md  huoyan_audit.md  pyproject.toml
deploy/: huoyan.service  install.sh  uninstall.sh
examples/: openai-compatible.yaml
src/huoyan/: __main__.py  cli.py  client.py  config.py  logging_utils.py  models.py  progress.py  reporting.py  runner.py  utils.py  versioning.py  web.py  web_jobs.py  web_store.py  web_ui.py
src/huoyan/suites/: __init__.py  agentic.py  authenticity.py  cost_security.py  performance.py  security_audit.py
tests/: test_agentic.py  test_client.py  test_cost_security.py  test_performance.py  test_reporting.py  test_scorecards.py  test_security.py  test_timezones.py  test_web.py
